--- a/src/app/pages/approvallist/approvallist.page.html
+++ b/src/app/pages/approvallist/approvallist.page.html
@@ -27,7 +27,7 @@
               </tr>
             </thead>
             <tbody>
-              <ng-container *ngFor="let data of approvalData">
+              <ng-container *ngFor="let data of approvalPendingList">
                 <tr>
                   <td scope="col" data-title="SI No">{{data.id}}</td>
                   <td scope="col" data-title="Request No">{{data.RequestNumber}}</td>
