--- a/src/app/pages/approvallist/approvallist.page.html
+++ b/src/app/pages/approvallist/approvallist.page.html
@@ -18,7 +18,8 @@
           <table class="table table-reponsive">
             <thead class="thead-light">
               <tr>
-                <th scope="col">ID</th>
+                <th scope="col">Seqeunce No</th>
+                <th scope="col">Approver Type</th>
                 <th scope="col">Request No</th>
                 <th scope="col">Request Type</th>
                 <th scope="col">Name</th>
@@ -29,7 +30,8 @@
             <tbody>
               <ng-container *ngFor="let data of approvalPendingList">
                 <tr>
-                  <td scope="col" data-title="SI No">{{data.id}}</td>
+                  <td scope="col" data-title="SI No">{{data.sequence}}</td>
+                  <td scope="col" data-title="SI No">{{data.approverType}}</td>
                   <td scope="col" data-title="Request No">{{data.RequestNumber}}</td>
                   <td scope="col" data-title="RequestType">{{data.RequestType}}</td>
                   <td scope="col" data-title="Name">{{data.Name}}</td>
