--- a/src/app/pages/approvallistdetails/approvallistdetails.page.html
+++ b/src/app/pages/approvallistdetails/approvallistdetails.page.html
@@ -21,7 +21,9 @@
                     <ion-select label="Select Status" formControlName="status" label-placement="floating"
                       fill="outline">
                       <ion-select-option value="Approved">Approved</ion-select-option>
+                      <ion-select-option value="Modification">Modification</ion-select-option>
                       <ion-select-option value="Reject">Reject</ion-select-option>
+                      
                     </ion-select>
                   </ion-col>
                   <ion-col size="6" color="primary">
