--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,57 +1,18 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
-
-
-.main-card ion-card-content {
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  color: #8c8c8c;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 20px;
-  border-radius: 10px;
-  background-color: #f2f2f2;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+.main-card {
+  background-image: url("https://www.linkpicture.com/q/sp-landing-back.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #3A3F50;
+  min-height: 80vh;
 }
 
 .triangle-container {
   text-align: center;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 20px;
+  margin: auto;
   border-radius: 10px;
-  background-color: #f2f2f2;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(218, 29, 29, 0.2);
+
 }
 
 .triangle-container .triangle-card {
@@ -83,7 +44,7 @@
     z-index: -1;
     top: -16px;
     right: -16px;
-    background: #00838d;
+    background: #1559A2;
     height: 32px;
     width: 32px;
     border-radius: 32px;
@@ -111,7 +72,7 @@
 
 
 
-
+// For Card 2
 .card2 {
   display: block;
   top: 0px;
@@ -140,7 +101,7 @@
     z-index: -1;
     top: -16px;
     right: -16px;
-    background: #00838d;
+    background: #1559A2;
     height: 32px;
     width: 32px;
     border-radius: 32px;
@@ -154,10 +115,7 @@
   }
 }
 
-
-
-
-
+// For Card 3
 .card3 {
   display: block;
   position: relative;
@@ -176,7 +134,7 @@
     z-index: -1;
     top: -16px;
     right: -16px;
-    background: #00838d;
+    background: #1559A2;
     height: 32px;
     width: 32px;
     border-radius: 32px;
@@ -202,6 +160,35 @@
   }
 }
 
+// Text Typing Animation
+.Cardtitle {
+  background: none;
+  font-family: monospace;
+  overflow: hidden;
+  border-right: 2px solid #0ec2e2;
+  white-space: nowrap;
+  margin: 0 auto;
+  animation: type 5s steps(26), blink .5s step-end infinite alternate;
+  text-shadow: 0 0 30px #1559A2;
+  font-size: 2em;
+  text-align: center;
+  color: #f9f8f8f3;
+  font-family: Inconsolata;
+  transition: all 0.2s ease-in-out;
+  animation-delay: 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+}
+
+@keyframes type {
+  0% {
+    width: 0ch;
+  }
+
+  100% {
+    width: 32ch;
+  }
+}
 
 
 // for all mobile devices
@@ -214,5 +201,18 @@
     border-radius: 10px;
     background-color: #f2f2f2;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  .row {
+    display: block;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+  }
+
+  .Cardtitle {
+    white-space: nowrap !important;
+    font-size: medium !important;
   }
 }
