--- a/src/app/component/newhireform/newhireform.component.scss
+++ b/src/app/component/newhireform/newhireform.component.scss
@@ -14,23 +14,47 @@
   border-color: red;
 }
 
+
+.inline-table table thead {
+  background: #428bca !important;
+  color: azure !important;
+}
+
+.inline-table table thead th {
+  border: 1px solid #ddd;
+  padding: 8px;
+  font-size: 1.2rem;
+  text-align: center;
+  white-space: nowrap;
+}
+
+
+label.required>span {
+  color: red;
+}
+
+
+tbody tr:nth-child(odd) {
+  background-color: #ebebeb;
+}
+
 // for mobile view only
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .inline-table {
     overflow-x: auto;
   }
-  
+
   .inline-table table {
     width: 100%;
     max-width: 100%;
     margin-bottom: 0;
     border-collapse: collapse;
   }
-  
+
   .inline-table table thead th {
     white-space: nowrap;
   }
-  
+
   .inline-table {
     width: 100%;
     -webkit-overflow-scrolling: touch;
@@ -48,8 +72,3 @@
     white-space: nowrap;
   }
 }
-
-
-
-
-
