--- a/src/app/pages/procurement/procurement.page.scss
+++ b/src/app/pages/procurement/procurement.page.scss
@@ -38,3 +38,11 @@ ion-radio-group{
         font-size: 1.5rem;
     }
 }
+
+
+ion-card-content{
+    .text-info span{
+        font-size: larger;
+    }
+}
+
