--- a/src/app/pages/procurementview/procurementview.page.html
+++ b/src/app/pages/procurementview/procurementview.page.html
@@ -1,8 +1,11 @@
-<ion-header translucent="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>Procurement List</ion-title>
+    <div class="back-circle">
+      <ion-img src="https://yokogawa.service-now.com/6749beaf1bbfe300b6351028bd4bcb1a.iix"></ion-img>
+      <ion-title class="custom-font">IT Procurement</ion-title>
+    </div>
     <ion-buttons slot="start">
-      <ion-menu-button menu="main-menu"></ion-menu-button>
+      <ion-menu-button menu="main-menu"> </ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -18,6 +21,7 @@
           <table class="table table-reponsive">
             <thead class="thead-light">
               <tr>
+                <th scope="col">SI No</th>
                 <th scope="col">Request No</th>
                 <th scope="col">Request Type</th>
                 <th scope="col">Name</th>
@@ -26,14 +30,16 @@
               </tr>
             </thead>
             <tbody>
-              <ng-container *ngFor="let data of procurementData">
+              <ng-container *ngFor="let data of procurementData; let i=index">
                 <tr>
+                  <td scope="col" data-title="SI No">{{i+1}}</td>
                   <td scope="col" data-title="Request No">{{data.RequestNumber}}</td>
                   <td scope="col" data-title="RequestType">{{data.RequestType}}</td>
                   <td scope="col" data-title="Name">{{data.Name}}</td>
                   <td scope="col" data-title="Status">{{data.Status}}</td>
                   <td scope="col" data-title="Action">
-                    <ion-button (click)="redirectToProcurementDetails(data.id)" class="edit" color="tertiary" fill="clear" size="small">
+                    <ion-button (click)="redirectToProcurementDetails(data.id)" class="edit" color="tertiary"
+                      fill="clear" size="small">
                       <ion-icon name="eye-off-outline"></ion-icon>
                     </ion-button>
                   </td>
