--- a/src/app/pages/procurementview/procurementview.page.scss
+++ b/src/app/pages/procurementview/procurementview.page.scss
@@ -19,7 +19,7 @@ table th {
   font-size: .85em;
   letter-spacing: .1em;
   text-transform: uppercase;
-  background-color: #84a9b2;
+  background-color: #428bca !important;
   color: #000;
 }
 
@@ -33,6 +33,11 @@ table td {
   text-align: center;
 }
 
+
+
+
+
+
 // @media screen and (max-width: 800px) {
 @media (max-width:768px) {
   table {
@@ -43,19 +48,13 @@ table td {
     display: none;
   }
 
-  // table tr {
-  //   margin-bottom: 1em;
-  //   display: block;
-  //   border-bottom: 2px solid #ddd;
-  // }
-
   table th,
   table td {
     padding: .5em;
   }
 
   tbody tr:nth-child(even) {
-    background-color: #c9ebfd;
+    background-color: rgba(0, 0, 0, 0.075);
   }
 
   table td {
@@ -75,6 +74,7 @@ table td {
     border-bottom: 0;
   }
 }
+
 // Modal Css
 .modal-table {
   ion-row {
@@ -89,19 +89,16 @@ table td {
         font-weight: bold;
       }
 
-      h2, p {
+      h2,
+      p {
         margin: 0;
       }
     }
   }
 
-  ion-card-header{
+  ion-card-header {
     background-color: #83b4c8;
     font-weight: bold;
   }
 
 }
-
-
-
-
