update modification part

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
 
               <ion-item [routerLink]="'/modification'">
                 <ion-icon slot="start" name="build-outline"></ion-icon>
-                <ion-label>My Modified</ion-label>
+                <ion-label>My Pending Task</ion-label>
               </ion-item>
 
 
