--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -66,7 +66,8 @@
           <ion-card class="triangle-card card2">
             <ion-card-header>
               <ion-card-title>DS-IN</ion-card-title>
-              <ion-card-subtitle>Procurement Aprovers</ion-card-subtitle>
+              <ion-card-subtitle>Network/Data Center</ion-card-subtitle>
+              <ion-card-subtitle>License Related Procurement</ion-card-subtitle>
             </ion-card-header>
           </ion-card>
           <ion-card class="triangle-card card3">
