--- a/src/app/pages/updatemodification/updatemodification.page.scss
+++ b/src/app/pages/updatemodification/updatemodification.page.scss
@@ -1,3 +1,20 @@
+.invalid1 input.form-control {
+    border-color: red;
+}
+
+.invalid select.form-control {
+    border-color: red;
+}
+
+.invalid-inline {
+    border: 1px solid red;
+}
+
+.invalid-inline input.form-control {
+    border-color: red;
+}
+
+
 .inline-table table thead {
     background: #428bca !important;
     color: azure !important;
@@ -9,4 +26,49 @@
     font-size: 1.2rem;
     text-align: center;
     white-space: nowrap;
+}
+
+
+label.required>span {
+    color: red;
+}
+
+
+tbody tr:nth-child(odd) {
+    background-color: #ebebeb;
+}
+
+// for mobile view only
+@media (max-width: 768px) {
+    .inline-table {
+        overflow-x: auto;
+    }
+
+    .inline-table table {
+        width: 100%;
+        max-width: 100%;
+        margin-bottom: 0;
+        border-collapse: collapse;
+    }
+
+    .inline-table table thead th {
+        white-space: nowrap;
+    }
+
+    .inline-table {
+        width: 100%;
+        -webkit-overflow-scrolling: touch;
+        overflow-y: hidden;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+        border: 1px solid #ddd;
+        margin-bottom: 15px;
+    }
+
+    .inline-table table {
+        margin-bottom: 0;
+    }
+
+    .inline-table table thead th {
+        white-space: nowrap;
+    }
 }
